# data515-proj

./: .gitignore  LICENSE  README.md  all_combined.csv  avi_recipes.csv  data.csv  data_check.csv  data_check.ipynb  data_check.txt  data_cleaning.ipynb  environment.yml  pyproject.toml  recipes_food_FINAL_CLEANED.csv  recipes_master_cleaned.csv  requirements.txt  william_recipes.csv
.github/workflows/: build_test.yml  ci.yml
.ipynb_checkpoints/: data-checkpoint.csv
api/: __init__.py  kroger_api_test.py  kroger_auth.py  kroger_shopping_cart.py  kroger_store_locator.py  shopping_cart.py
app/: __init__.py  app.py  test_app.py
app/pages/: home.py  recipes.py
data/: data_cleaning.ipynb  recipes_food_FINAL_CLEANED.csv
docs/: component_specification.md  functional_specification.md  milestones.md  user.md
docs/technology_review/: ploty_demo.py  streamlit.py  tech_review_md.md
docs/technology_review/.ipynb_checkpoints/: plotly-checkpoint.py
examples/: example.md
tests/: __init__.py  conftest.py  test_app.py  test_kroger_auth.py  test_kroger_shopping_cart.py  test_kroger_store_locator.py
