[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cooking-helper"
version = "0.0.1"
authors = [
  { name="Jianna Wong" },
  { name="William Hu" },
  { name="Amber Yang" },
  { name="Sundari Avanthikaa Srinivasan" }
]
description = "cooking-helper"
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "altair",
    "beautifulsoup4",
    "dash",
    "dash-bootstrap-components",
    "kroger-api",
    "matplotlib",
    "numpy",
    "pandas",
    "plotly",
    "pyarrow",
    "python-dotenv",
    "requests",
    "streamlit",
    "tqdm"
]

[tool.setuptools.packages.find]
include = ["app", "api", "data"]